2008-03-05  Łukasz Rymarczyk <yenidai(at)poczta(dot)onet(dot)pl>
    * src/plugins/rel_pl.py: 0001776: Relationship calculator, update Polish
    Rewritten for 3.x version

2008-03-04  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Simple/_SimpleTable.py: 
	added callback for click/doubleclick manual override for rows
	added numeric sorting
	* src/QuickReports.py: added run_quick_report_by_name_direct
	that allows one quick report to run another
	* src/plugins/DefaultGramplets.py: made stats gramplet show 
	details when drilling down with double-click
	* src/plugins/SameSurnames.py: allow running by string rather than 
	person object
	* src/DataViews/GrampletView.py: added Filter type of link; fixed
	bug in drag and drop from earlier option infrastructure
	* src/plugins/FilterByName.py: quick report that runs a filter by
	name

2008-03-04  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/docgen/HtmlDoc.py (HtmlDoc.page_break): 
	Fixed indentation issue

2008-03-04 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/Bookmarks.py: 0001770: Bookmark Editor window and deleting entries 
    Set focus on bookmark right above the deleted bookmark
    * src/gramps.py: comment typo
    * src/ListModel.py: fix, changed func((param)) to func(param)

2008-03-04 Peter Landgren <peter.talken2telia.com>
    * src/docgen/HtmlDoc.py: Issues 1875 and 1879#

2008-03-04 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/plugins/WritePkg.py: added import Utils to prevent crash on export

2008-03-04  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py: added infrastructure for 
	editing options from the gui.

2008-03-04  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/PluginUtils/_GuiOptions.py (make_gui_option): 
	new stand-alone function that takes Option, returns GuiOption
	(attempting to make Options useable in additional ways)

2008-03-03 Frederik De Richter <frederik.de.richter@pandora.be>
	* src/plugins/Desbrowser.py